# SheetBot

./: .env_example  .gitignore  README.md  pyproject.toml
src/sheetbot/: __init__.py  bot.py  sheetCommands.py
